crates/weft-snapshots/tests/snapshots/react-tsx/example-screen.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-screen as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" data-state="ready" aria-label="Home">
      <h1 data-weft-id="title">Welcome back</h1>
      <div data-weft-id="intro">Pick up where you left off.</div>
    </main>
  );
}
