crates/weft-snapshots/tests/snapshots/react-tsx/example-section.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-section as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Account">
      <section data-weft-id="profile" aria-label="Profile">
        <div data-weft-slot="header">
          <h2 data-weft-id="profile-title">Profile</h2>
        </div>
        <div data-weft-id="bio">Product designer based in Lisbon.</div>
      </section>
    </main>
  );
}
