crates/weft-snapshots/tests/snapshots/react-tsx/example-segmented-control.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-segmented-control as react-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen({ data, actions, onChange }: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Calendar">
      <div data-weft-id="view" aria-label="View" role="radiogroup" data-weft-segmented="">
        <span aria-hidden="true">View</span>
        <label>
          <input data-weft-id="view-day" type="radio" name={"weft-view"} value="day" aria-label="Day" checked={_text(data?.view) !== "" && "day" === _text(data?.view)} onChange={() => { onChange?.("$.view", "day"); _act(actions, { id: "view", action: "calendar.update" }); }} />
          <span aria-hidden="true">Day</span>
        </label>
        <label>
          <input data-weft-id="view-week" type="radio" name={"weft-view"} value="week" aria-label="Week" checked={_text(data?.view) !== "" && "week" === _text(data?.view)} onChange={() => { onChange?.("$.view", "week"); _act(actions, { id: "view", action: "calendar.update" }); }} />
          <span aria-hidden="true">Week</span>
        </label>
        <label>
          <input data-weft-id="view-month" type="radio" name={"weft-view"} value="month" aria-label="Month" checked={_text(data?.view) !== "" && "month" === _text(data?.view)} onChange={() => { onChange?.("$.view", "month"); _act(actions, { id: "view", action: "calendar.update" }); }} />
          <span aria-hidden="true">Month</span>
        </label>
      </div>
    </main>
  );
}
